# rust_actixweb_tera

./: .env  Cargo.toml  README.md
assets/templates/components/: navbar.html
assets/templates/error/: 404.html
assets/templates/pages/: home.html
src/: init.rs  main.rs
src/controller/: PageController.rs
