[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.19.0"
actix-web = "4.3.1"
actix-files = "0.6.2"
lazy_static = "1.4.0"
logger-rust = "0.2.12"
dotenv = "0.15.0"
actix-multipart = "0.6.0"
actix-session = "0.7.2"
env_logger = "0.10.0"
serde_json = "1.0.105"
futures = "0.3.28"
futures-util = "0.3.28"